Заготовка для реализации переноса в холодное хранилище.
