# Storage.Api/Dto/MappingExt.cs
@@ -1,5 +1,4 @@
 ﻿using Storage.Api.Lss;
-using Storage.Cluster;
 using Model = Storage.Cluster.DataAccess.Model;
 
 namespace Storage.Api.Dto;
@@ -8,18 +7,30 @@ internal static class MappingExt
 {
     extension(Model.Node node)
     {
-        public NodeDto ToDto() => new(node.NodeId, node.HostName);
+        public NodeDto ToDto() => new(
+            node.NodeId,
+            node.HostName);
     }
 
     extension(Model.Bucket bucket)
     {
-        public BucketDto ToDto() => new(bucket.BucketId, bucket.NodeId, bucket.Ttl);
+        public BucketDto ToDto() => new(
+            bucket.BucketId,
+            bucket.NodeId,
+            bucket.TtlHot,
+            bucket.TtlCold);
     }
 
     extension(Model.File file)
     {
-        public DataLocation Location => new(file.BucketId, file.PartId, file.PartOffset);
+        public DataLocation Location => new(
+            file.BucketId,
+            file.PartId,
+            file.PartOffset);
 
-        public FileDto ToDto() => new(file.FileName, file.FileSize, file.CreatedAt);
+        public FileDto ToDto() => new(
+            file.FileName,
+            file.FileSize,
+            file.CreatedAt);
     }
 }
